# tiny_reflect

./: CMakeLists.txt  README.md  build.sh
include/: ClassFactory.h
include/reflect/: ClassFactory.h  ClassFied.h  Object.h  RegesterClass.h
src/: A.h  ClassFactory.cpp  ClassFied.cpp  RegesterClass.cpp  main.cpp
